# LiveSound

./: LICENSE  README.md  README_zh.md  pyproject.toml  requirements.txt  setup.py
livesound/libs/: gui.py  i18n.py  player.py  quality.py  receiver.py  recorder.py
livesound/libs/metrics/: __init__.py
livesound/resources/: __init__.py
livesound/scripts/: recorder.py  simple_player.py  simple_recorder.py
test/: pytest.ini  test_player.py  test_receiver.py
