[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "LiveSound"
version = "2.0.0"
description = "專業音訊錄音工具 - Professional Audio Recording Tool"
authors = [{name = "Milo Wu"}]
license = {text = "MIT"}
requires-python = ">=3.6.0"
keywords = ["audio", "recording", "gui", "cli", "dnsmos", "quality"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Capture/Recording",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dynamic = ["dependencies", "readme"]

[project.optional-dependencies]
test = [
    "pytest",
]

[project.scripts]
livesound-record = "livesound.scripts.recorder:main"

[tool.setuptools]

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
readme = {file = ["README.md"], content-type = "text/markdown"}

[tool.setuptools.package-data]
livesound = [
    "libs/metrics/dnsmos_p808.onnx",
    "libs/metrics/dnsmos_primary.onnx",
]